--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,35 +1,24 @@
-.header__container {
-    background-color: #073042;
-}
-
-.header__container_type_not-main {
-    background-color: #202020;
-}
-
-.header__content {
+.header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    min-height: 74px;
+    padding: 30px 15px 0 15px;
 }
 
-.header__content_type_movies {
-    justify-content: flex-start;
+.header__logo {
+    width: 260px;
+    height: 100px;
 }
 
-.logo {
-    height: 38px;
-    width: 38px;
+.header__btn-login {
+    background: transparent center no-repeat url("./../../images/enter.svg");
+    background-size: auto;
+    width: 50px;
+    height: 50px;
+    border: none;
 }
 
-.logo_type_movies {
-    margin-right: 44px;
+.header__btn-login:hover {
+    background: transparent center no-repeat url("./../../images/enter-hover.svg");
+    cursor: pointer;
 }
-
-/*@media screen and (max-width: 768px) {*/
-/*    .header__content_type_movies {*/
-/*        justify-content: space-between;*/
-/*    }*/
-/*}*/
-
